--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
 
 script:
   - xbuild /p:Configuration=Release Rabscuttle.sln
-  - mono ./packages/NUnit.ConsoleRunner.3.2.0/tools/nunit3-console.exe ./RabscuttleTests/
+  - mono ./packages/NUnit.ConsoleRunner.3.2.0/tools/nunit3-console.exe ./RabscuttleTests/bin/Release/Tests.dll
