--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp
 sudo: false
-solution: ValveResourceFormat.sln
+solution: Rabscuttle.sln
 
 os:
 - linux
@@ -14,4 +14,4 @@ install:
 
 script:
   - xbuild /p:Configuration=Release Rabscuttle.sln
-  - mono ./packages/NUnit.ConsoleRunner.3.2.0/tools/nunit3-console.exe ./RabscuttleTests/bin/Release/Tests.dll
+  - mono ./packages/NUnit.ConsoleRunner.3.4.1/tools/nunit3-console.exe ./RabscuttleTests/bin/Release/Tests.dll
