Sending-Stack (Spam Protection), first few IRC-Commands (JOIN, USER, PRIVMSG, PING, PONG, NICK), Method to ReceiveUntil a certain packet.

--- a/Rabscuttle/Rabscuttle.csproj
+++ b/Rabscuttle/Rabscuttle.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="core\MainEntry.cs" />
+    <Compile Include="networking\CommandSchedule.cs" />
+    <Compile Include="networking\IrcCommands.cs" />
     <Compile Include="networking\ConnectionManager.cs" />
     <Compile Include="networking\INetworking.cs" />
     <Compile Include="networking\NetworkMessage.cs" />
