Concluding netcode, commands still missing, but the base works.

--- a/Rabscuttle/Rabscuttle.csproj
+++ b/Rabscuttle/Rabscuttle.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="core\MainEntry.cs" />
     <Compile Include="networking\CommandSchedule.cs" />
+    <Compile Include="networking\commands\IrcCommands.cs" />
     <Compile Include="networking\commands\ProtocolDefinitions.cs" />
     <Compile Include="networking\commands\RawIrcCommands.cs" />
     <Compile Include="networking\ConnectionManager.cs" />
