Barebones for Channel Handling is in - next stop: reimplementing packages to self-parsing.

--- a/RabscuttleTests/RabscuttleTests.csproj
+++ b/RabscuttleTests/RabscuttleTests.csproj
@@ -51,6 +51,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="networking\handler\ChannelHandlerTests.cs" />
     <Compile Include="networking\NetworkMessageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
