--- a/Rabscuttle/Rabscuttle.csproj
+++ b/Rabscuttle/Rabscuttle.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Rabscuttle.core.handler.NewPluginHandler</StartupObject>
+    <StartupObject>Rabscuttle.MainEntry</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
@@ -56,7 +56,7 @@
     <Compile Include="core\channel\UserRelation.cs" />
     <Compile Include="MainEntry.cs" />
     <Compile Include="handler\NewPluginHandler.cs" />
-    <Compile Include="handler\NewPluginRunner.cs" />
+    <Compile Include="handler\NewPluginProvider.cs" />
     <Compile Include="networking\CommandSchedule.cs" />
     <Compile Include="networking\commands\IrcReplies.cs" />
     <Compile Include="networking\commands\ProtocolDefinitions.cs" />
