--- a/Rabscuttle/Rabscuttle.csproj
+++ b/Rabscuttle/Rabscuttle.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Rabscuttle.MainEntry</StartupObject>
+    <StartupObject>Rabscuttle.Rabscuttle</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
@@ -55,7 +55,6 @@
     <Compile Include="channel\Channel.cs" />
     <Compile Include="channel\User.cs" />
     <Compile Include="channel\UserRelation.cs" />
-    <Compile Include="MainEntry.cs" />
     <Compile Include="networking\CommandSchedule.cs" />
     <Compile Include="networking\commands\IrcReplies.cs" />
     <Compile Include="networking\commands\ProtocolDefinitions.cs" />
@@ -70,8 +69,10 @@
     <Compile Include="plugins\CommandMessage.cs" />
     <Compile Include="plugins\IPluginContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rabscuttle.cs" />
     <Compile Include="stuff\ConfigurationProvider.cs" />
     <Compile Include="stuff\Logger.cs" />
+    <Compile Include="util\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
