--- a/Plugins/GithubUpdatedPlugin/GithubUpdatedPlugin.csproj
+++ b/Plugins/GithubUpdatedPlugin/GithubUpdatedPlugin.csproj
@@ -4,41 +4,42 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E81D325A-A9AF-49B8-9089-5AE2856B1B53}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{1A8773ED-230E-444C-B559-304269D30EAD}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PluginDebugger</RootNamespace>
-    <AssemblyName>PluginDebugger</AssemblyName>
+    <RootNamespace>GithubUpdatedPlugin</RootNamespace>
+    <AssemblyName>GithubUpdatedPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Rabscuttle\bin\Debug\</OutputPath>
+    <OutputPath>..\..\Rabscuttle\bin\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <IntermediateOutputPath>C:\Users\Mio\AppData\Local\Temp\vsC478.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\Rabscuttle\bin\Plugins\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <IntermediateOutputPath>C:\Users\Mio\AppData\Local\Temp\vsC478.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,49 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PluginDebugger.cs" />
+    <Compile Include="GithubUpdatedPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Plugins\CommandsPlugin\CommandsPlugin.csproj">
-      <Project>{8be24acc-92f7-40b0-933d-3e42c43c93df}</Project>
-      <Name>CommandsPlugin</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Plugins\ExamplePlugin\ExamplePlugin.csproj">
-      <Project>{14606e2e-a5b9-49be-9211-05db99684b0c}</Project>
-      <Name>ExamplePlugin</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Plugins\FuckPlugin\FuckPlugin.csproj">
-      <Project>{be80aba2-0b3d-41ab-8165-569b6c4ca251}</Project>
-      <Name>FuckPlugin</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Plugins\GithubUpdatedPlugin\GithubUpdatedPlugin.csproj">
-      <Project>{1a8773ed-230e-444c-b559-304269d30ead}</Project>
-      <Name>GithubUpdatedPlugin</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Plugins\KarmaPlugin\KarmaPlugin.csproj">
-      <Project>{4fc2252b-4e85-42be-b56c-5e7b646937ac}</Project>
-      <Name>KarmaPlugin</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Plugins\RankPlugin\RankPlugin.csproj">
-      <Project>{91ac7a19-8f78-4274-ac57-a10000c6beb7}</Project>
-      <Name>RankPlugin</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Plugins\RawPlugin\RawPlugin.csproj">
-      <Project>{7ddf18eb-cfae-4c37-a81e-57b3ef8e6a59}</Project>
-      <Name>RawPlugin</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Rabscuttle\Rabscuttle.csproj">
+    <ProjectReference Include="..\..\Rabscuttle\Rabscuttle.csproj">
       <Project>{718159e3-8a0b-41b8-abdb-b35c43538697}</Project>
       <Name>Rabscuttle</Name>
       <Private>False</Private>
