--- a/Plugins/ExamplePlugin/ExamplePlugin.csproj
+++ b/Plugins/ExamplePlugin/ExamplePlugin.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="ExamplePlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecondExamplePlugin.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Rabscuttle\Rabscuttle.csproj">
