Debug Plugin - so you can get to check what the bot sees.

--- a/Plugins/CoreFunctions/CoreFunctions.csproj
+++ b/Plugins/CoreFunctions/CoreFunctions.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandsPlugin.cs" />
+    <Compile Include="DebugPlugin.cs" />
     <Compile Include="HelpPlugin.cs" />
     <Compile Include="PingPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
