Ban functionality is in

--- a/Plugins/GithubUpdatedPlugin/GithubUpdatedPlugin.csproj
+++ b/Plugins/GithubUpdatedPlugin/GithubUpdatedPlugin.csproj
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\..\Rabscuttle\bin\Plugins\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <IntermediateOutputPath>C:\Users\Mio\AppData\Local\Temp\vsC478.tmp\Debug\</IntermediateOutputPath>
