Basic Core functionality added now, too. Join, Part, Nick

--- a/Plugins/CoreFunctions/CoreFunctions.csproj
+++ b/Plugins/CoreFunctions/CoreFunctions.csproj
@@ -40,6 +40,9 @@
     <Compile Include="CommandsPlugin.cs" />
     <Compile Include="DebugPlugin.cs" />
     <Compile Include="HelpPlugin.cs" />
+    <Compile Include="JoinPlugin.cs" />
+    <Compile Include="NickPlugin.cs" />
+    <Compile Include="PartPlugin.cs" />
     <Compile Include="PingPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RankPlugin.cs" />
