--- a/Plugins/CoreFunctions/CoreFunctions.csproj
+++ b/Plugins/CoreFunctions/CoreFunctions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RankPlugin.cs" />
     <Compile Include="RawPlugin.cs" />
+    <Compile Include="ShutdownPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Rabscuttle\Rabscuttle.csproj">
