--- a/Rabscuttle/Rabscuttle.csproj
+++ b/Rabscuttle/Rabscuttle.csproj
@@ -82,6 +82,7 @@
     <Compile Include="channel\Channel.cs" />
     <Compile Include="channel\User.cs" />
     <Compile Include="channel\UserRelation.cs" />
+    <Compile Include="exception\ConnectionClosedException.cs" />
     <Compile Include="handler\VoidHandler.cs" />
     <Compile Include="networking\CommandSchedule.cs" />
     <Compile Include="networking\commands\IrcReplies.cs" />
@@ -94,12 +95,12 @@
     <Compile Include="networking\io\INetworking.cs" />
     <Compile Include="networking\io\NetworkMessage.cs" />
     <Compile Include="networking\io\BotClient.cs" />
-    <Compile Include="plugins\CommandMessage.cs" />
-    <Compile Include="plugins\IPluginContract.cs" />
+    <Compile Include="plugin\CommandMessage.cs" />
+    <Compile Include="plugin\IPluginContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rabscuttle.cs" />
-    <Compile Include="stuff\ConfigurationProvider.cs" />
-    <Compile Include="stuff\Logger.cs" />
+    <Compile Include="util\ConfigurationProvider.cs" />
+    <Compile Include="util\Logger.cs" />
     <Compile Include="util\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
