--- a/Plugins/LinkPreviewPlugin/LinkPreviewPlugin.csproj
+++ b/Plugins/LinkPreviewPlugin/LinkPreviewPlugin.csproj
@@ -34,21 +34,23 @@
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Handlers\RedditHandler.cs" />
+    <Compile Include="Handlers\TwitchHandler.cs" />
+    <Compile Include="Handlers\TwitterHandler.cs" />
     <Compile Include="ILinkHandler.cs" />
     <Compile Include="LinkCoordinator.cs" />
     <Compile Include="LinkPreviewPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -57,6 +59,7 @@
     <ProjectReference Include="..\..\Rabscuttle\Rabscuttle.csproj">
       <Project>{718159E3-8A0B-41B8-ABDB-B35C43538697}</Project>
       <Name>Rabscuttle</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
