More link handlers and a random crash counter of source 2 tools.

--- a/Rabscuttle/Rabscuttle.csproj
+++ b/Rabscuttle/Rabscuttle.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Rabscuttle.cs" />
     <Compile Include="util\ConfigurationProvider.cs" />
     <Compile Include="util\HttpsVerificator.cs" />
+    <Compile Include="util\JsonUtility.cs" />
     <Compile Include="util\Logger.cs" />
     <Compile Include="util\Validator.cs" />
   </ItemGroup>
